[project]
name = "ponkey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sosuts", email = "sosuke.utsunomiya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.2",
]

[project.scripts]
ponkey = "ponkey:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "pytest-sugar>=1.0.0",
    "ruff>=0.7.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = []
